syntax = "proto3";

package user;

message SignupRequest {
  string email = 1;
  string password = 2;
}

message ResetPasswordRequest {
  string email = 1;
  string new_password = 2;
  string otp = 3;
}

message DeleteRequest {
  string password = 1;
  string otp = 2;
}

message MultiFactorRequest {
  enum actions {
    ENABLE = 0;
    DISABLE = 1;
  };

  actions action = 1;
  string method = 2;
  string password = 3;
  string otp = 4;
}

message Empty {}

service User {
  rpc Signup(SignupRequest) returns (Empty);
  rpc ResetPassword(ResetPasswordRequest) returns (Empty);
  rpc MultiFactor(MultiFactorRequest) returns (Empty);
  rpc Delete(DeleteRequest) returns (Empty);
}